--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,80 +8,61 @@
             type="com.example.mobiquity.ui.item.ItemAdapterViewModel" />
     </data>
 
-    <LinearLayout android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
-        android:background="@drawable/gradiant">
-
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
+        android:onClick="@{() -> viewModel.onItemClick(viewModel.getItem())}"
+        android:layout_height="50dp"
+        android:gravity="center_vertical"
+        android:background="@android:drawable/list_selector_background"
+        android:orientation="vertical">
+
+        <LinearLayout android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="0.9"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:fontFamily="@font/roboto_medium"
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            app:mutableText="@{viewModel.getItemName()}"
-            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="left|center_vertical">
 
-            android:id="@+id/tvTitle"/>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:gravity="center_vertical"
+                android:layout_weight="0.8"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:text="asdada"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:textColor="@color/black"
+                    app:mutableText="@{viewModel.getItemName()}"
+                    android:id="@+id/tvTitle"/>
+            </LinearLayout>
 
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_weight=".1"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:scaleType="fitCenter"
+                    android:background="@android:color/transparent"
+                    android:tint="@color/black"
+                    android:id="@+id/btn_collapsible_group_indicator"
+                    android:src="@drawable/ic_right_arrow_more" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto_medium"
-            android:textColor="@color/gray"
-            app:mutableText="@{viewModel.getItemId()}"
-            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
-            app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/tvDate"/>
+        </LinearLayout>
 
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto_medium"
-            android:textColor="@color/white"
-            app:mutableText="@{viewModel.getItemDescription()}"
-            app:layout_constraintBottom_toBottomOf="@+id/tvDate"
-            app:layout_constraintEnd_toStartOf="parent"
-            android:layout_marginBottom="20dp">
-
-        </TextView>
-    </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:scaleType="fitCenter"
-                android:background="@android:color/transparent"
-                android:tint="@color/white"
-                android:id="@+id/btn_collapsible_group_indicator"
-                android:src="@drawable/ic_right_arrow_more" />
-        </RelativeLayout>
-
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:adapter="@{viewModel.getProductListAdapter()}"/>-->
     </LinearLayout>
 </layout>
 
