work on on error images

--- a/app/src/main/res/layout/product.xml
+++ b/app/src/main/res/layout/product.xml
@@ -17,20 +17,43 @@
         >
 
 
-        <ImageView
-            android:id="@+id/img_product"
-            android:layout_width="fill_parent"
+<!--        <ImageView-->
+<!--            android:id="@+id/img_product"-->
+<!--            android:layout_width="fill_parent"-->
+<!--            android:layout_height="250dp"-->
+<!--            android:layout_marginEnd="0dp"-->
+<!--            android:layout_marginStart="0dp"-->
+<!--            android:contentDescription="@string/app_name"-->
+<!--            android:fitsSystemWindows="false"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            app:layout_constraintDimensionRatio="w,16:9"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:image_url="@{viewModel.getProductImageUrl()}"/>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:contentDescription="@string/app_name"
+            android:clickable="true"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:id="@+id/ll_img_product"
+            android:orientation="horizontal"
             android:fitsSystemWindows="false"
-            android:scaleType="centerCrop"
+            android:gravity="center"
             app:layout_constraintDimensionRatio="w,16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:image_url="@{viewModel.getProductImageUrl()}"/>
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/img_product"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                app:image_url="@{viewModel.getProductImageUrl()}" />
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -39,8 +62,7 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
             app:layout_constraintDimensionRatio="w,400:576"
-            app:layout_constraintTop_toBottomOf="@+id/img_product"
-            app:layout_constraintBottom_toBottomOf="@+id/img_product"
+            app:layout_constraintBottom_toBottomOf="@+id/ll_img_product"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start">
 
@@ -48,7 +70,9 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:background="@drawable/gradiant"
-                android:layout_marginTop="20dp"
+                android:alpha="0.5"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="fill_parent"
@@ -61,36 +85,37 @@
                     android:layout_marginTop="10dp"
                     app:mutableText="@{viewModel.getProductName()}"
                     app:layout_constraintTop_toTopOf="parent"
-
                     android:id="@+id/tvTitle"/>
 
-
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:textColor="@color/gray"
-                    app:mutableText="@{viewModel.getProductAmount()}"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:id="@+id/tvAmount"/>
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                <RelativeLayout
+                    android:id="@+id/layout_product_amount"
+                    android:layout_width="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="2dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:textColor="@color/gray"
-                    app:mutableText="@{viewModel.getProductCurrency()}"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvAmount"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:id="@+id/tvCurrency"/>
+                    app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/roboto_medium"
+                        android:textColor="@color/gray"
+                        app:mutableText="@{viewModel.getProductAmount()}"
+                        android:id="@+id/tvAmount"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_marginLeft="10dp"
+                        android:fontFamily="@font/roboto_medium"
+                        android:textColor="@color/gray"
+                        app:mutableText="@{viewModel.getProductCurrency()}"
+                        android:layout_toRightOf="@+id/tvAmount"
+                        android:id="@+id/tvCurrency"/>
+                </RelativeLayout>
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -101,10 +126,11 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/roboto_medium"
                     android:textColor="@color/white"
+                    app:mutableVisibility="@{viewModel.showProductDesc()}"
                     app:mutableText="@{viewModel.getProductDescription()}"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvCurrency"
+                    app:layout_constraintBottom_toBottomOf="@+id/layout_product_amount"
                     app:layout_constraintEnd_toStartOf="parent"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="10dp">
 
                 </TextView>
 
