--- a/app/src/main/res/drawable/gradiant.xml
+++ b/app/src/main/res/drawable/gradiant.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
             android:angle="270"
-            android:startColor="#d2000000"
-            android:endColor="#d2000000"
-            android:centerColor="#d2000000"
+            android:startColor="@color/colorPrimaryDark"
+            android:endColor="@color/white"
+            android:centerColor="@color/colorPrimary"
 
     />
 </shape>
